Trying a homepage adjustment Seeing if GitHub Paghes will like this better

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amplify-react-coin-app",
-  "homepage": "cdmckinley.github.io/matc-adv-cloud-project-3",
+  "homepage": "matc-adv-cloud-project-3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
